Fix vertical spacing on iOS Safari, content hidden by screen furniture

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12842,7 +12842,7 @@ a:visited {
   background-color: white;
   display: flex;
   flex-flow: column;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
 }
 
