--- a/resources/sass/chat.scss
+++ b/resources/sass/chat.scss
@@ -2,7 +2,7 @@
   background-color: white;
   display: flex;
   flex-flow: column;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   
   @include media-breakpoint-up(md) {
